adding dev server to package

--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "quill": "github:healthie/quill#develop",
-    "react-dom-factories": "^1.0.0",
-    "webpack": "^1.4.13"
+    "react-dom-factories": "^1.0.0"
   },
   "peerDependencies": {
     "react": "^0.14.9 || ^15.3.0 || ^16.0.0"
@@ -76,6 +75,7 @@
     "sinon": "^2.3.5",
     "travis-cov": "^0.2.5",
     "uglify-js": "^3.0.18",
-    "webpack": "^1.4.13"
+    "webpack": "^1.4.13",
+    "webpack-dev-server": "^1.4.13"
   }
 }
